pld-comp/tests/ifcc-test-output/testfiles-3_7_misparcours2/gcc-compile.txt
input.c: In function ‘main’:
input.c:6:1: error: version control conflict marker in file
 <<<<<<< HEAD
 ^~~~~~~
input.c:8:1: error: version control conflict marker in file
 =======
 ^~~~~~~
input.c:10:1: error: version control conflict marker in file
 >>>>>>> 268fcc39c0ba7ef84fed24a7f849c2813a2ca136
 ^~~~~~~
input.c:10:9: error: invalid suffix "fcc39c0ba7ef84fed24a7f849c2813a2ca136" on integer constant
 >>>>>>> 268fcc39c0ba7ef84fed24a7f849c2813a2ca136
         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

return code: 1
